Fix horizontal scroll glitch when filling the page with movies

--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -50,6 +50,9 @@ html,
 body {
   background: #000000;
 }
+body {
+  overflow-y: scroll;
+}
 input,
 select,
 textarea,
